--- a/templates/write.html
+++ b/templates/write.html
@@ -44,7 +44,7 @@
     <!--파일업로드 코드-->
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
 
-    <title>공유 여행 기록장</title>
+    <title>우리의 여행</title>
 
     <style>
     .sitetop {
@@ -90,14 +90,40 @@
             margin: auto;
         }
 
+        /* 포스팅 관련 css 시작 */
+     .form-post {
+            width: 500px;
+            margin: 20px auto;
+            padding: 50px;
+            border: black solid;
+            border-radius: 5px;
+        }
+
+            /* 간단 코멘트 위 아래 여백 */
+        .form-group-comment {
+            margin-top: 15px;
+            margin-bottom: 20px;
+        }
+        /* 포스팅 관련 css 끝 */
+
     </style>
+
+    <script>
+        $(document).ready(function () {
+            // 이것은 파일업로드 할때 파일명을 보이게 해주는 코드
+            bsCustomFileInput.init()
+        })
+    </script>
+
   </head>
+
   <body>
     <header class="wrap">
         <div class="sitetop">
             우리의 여행
         </div>
       <div class="topnav">
+          <!-- 아직 연결은 안됨 -->
         <a class="active" href="index.html">홈</a>
         <a href="write.html">기록장</a>
         <a href="#mypost">내 글 모아보기</a>
@@ -107,7 +133,60 @@
     </header>
 
     <div class="wrap">
-        여기는 몸뚱아리
+
+        <!--본문 부분: 기록 작성-->
+    <div class="form-post" id="post-box">
+        <div>
+            <div class="form-group">
+                <input class="form-control" id="post-writer" placeholder="작성자">
+            </div>
+            <div class="form-group">
+                <input class="form-control" id="post-place" placeholder="장소">
+            </div>
+            <div class="form-group">
+                <input class="form-control" id="post-title" placeholder="제목">
+            </div>
+
+            <!--날짜-->
+            <div class="form-group">
+                <input type="date" class="form-control" id="post-date" name="trip-start"
+                       placeholder="날짜 선택">
+            </div>
+
+            <!--날씨 중에 쓸 이모티콘을 선택해야 함-->
+            <div class="form-group">
+                <select class="custom-select" id="post-weather">
+                    <option selected>날씨 선택</option>
+                    <option value="1">☀️</option>
+                    <option value="2">⛅</option>
+                    <option value="3">☁️</option>
+                    <option value="4">⛈️</option>
+                    <option value="5">☔</option>
+                    <option value="6">🌧️</option>
+                    <option value="7">🌩️</option>
+                    <option value="8">❄️</option>
+                </select>
+            </div>
+
+            <!--사진첨부-->
+            <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="file">
+                    <label class="custom-file-label" for="file">사진 선택</label>
+            </div>
+
+            <!--내용작성-->
+            <div class="form-group-comment">
+                <label for="post-comment">간단 코멘트</label>
+                <textarea class="form-control" id="post-comment" rows="2"></textarea>
+            </div>
+
+            <button class="btn btn-primary" onclick="postArticle()" type="button">기록 저장</button>
+        </div>
+    </div>
+    <div class="card-columns" id="cards-box">
+    </div>
+</div>
+
     </div>
 
     <footer class="wrap">
