--- a/templates/write.html
+++ b/templates/write.html
@@ -90,7 +90,7 @@
             margin: auto;
         }
 
-        /* 포스팅 관련 css 시작 */
+        /* write.html만의 부분 s */
      .form-post {
             width: 500px;
             margin: 20px auto;
@@ -104,7 +104,67 @@
             margin-top: 15px;
             margin-bottom: 20px;
         }
-        /* 포스팅 관련 css 끝 */
+        /* write.html만의 부분 e */
+
+        @media screen and (max-width: 780px) {
+            /* 아직 write.html에만 작성했고 전체 html에 통일할 계획 s */         
+            .sitetop {
+                width: 100%;
+                height: 200px;
+            }
+            
+            /* Add a black background color to the top navigation */
+            .topnav {
+                width: 100%;
+                margin: auto;
+                background-color: #333;
+                overflow: hidden;
+            }
+
+            /* Style the links inside the navigation bar */
+            .topnav a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 10px 16px;
+                text-decoration: none;
+                font-size: 15px;
+            }
+
+            /* Change the color of links on hover */
+            .topnav a:hover {
+                background-color: #ddd;
+                color: black;
+            }
+
+            /* Add a color to the active/current link */
+            .topnav a.active {
+                background-color: #04aa6d;
+                color: white;
+            }
+
+            .fixed {
+                position: -webkit-sticky;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+                width: 100%;
+            }
+
+            .wrap {
+                width: 100%;
+            }
+            /* 아직 write.html에만 작성했고 전체 html에 통일할 계획 e */
+
+            /* write.html만의 부분 s */
+            .form-post {
+                width: 80%;
+                padding: 30px 25px 25px 20px;
+                margin: auto;
+            }
+            /* write.html만의 부분 e */
+            /* !!여기는 모바일 버전 css 끝!! */
+        }
 
     </style>
 
@@ -113,12 +173,20 @@
             // 이것은 파일업로드 할때 파일명을 보이게 해주는 코드
             bsCustomFileInput.init()
         })
+
+        $(window).scroll(function(){
+            var topnav_sticky = $('.topnav'),
+                scroll = $(window).scrollTop();
+
+            if (scroll >= 100) sticky.addClass('fixed');
+            else topnav_sticky.removeClass('fixed');
+        });
     </script>
 
   </head>
 
   <body>
-    <header class="wrap">
+    <header class="wrap" id="myheader">
         <div class="sitetop">
             우리의 여행
         </div>
@@ -135,58 +203,55 @@
     <div class="wrap">
 
         <!--본문 부분: 기록 작성-->
-    <div class="form-post" id="post-box">
-        <div>
-            <div class="form-group">
-                <input class="form-control" id="post-writer" placeholder="작성자">
-            </div>
-            <div class="form-group">
-                <input class="form-control" id="post-place" placeholder="장소">
-            </div>
-            <div class="form-group">
-                <input class="form-control" id="post-title" placeholder="제목">
-            </div>
+        <div class="form-post" id="post-box">
+            <div>
+                <div class="form-group">
+                    <input class="form-control" id="post-writer" placeholder="작성자">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" id="post-place" placeholder="장소">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" id="post-title" placeholder="제목">
+                </div>
 
-            <!--날짜-->
-            <div class="form-group">
-                <input type="date" class="form-control" id="post-date" name="trip-start"
-                       placeholder="날짜 선택">
-            </div>
+                <!--날짜-->
+                <div class="form-group">
+                    <input type="date" class="form-control" id="post-date" name="trip-start"
+                        placeholder="날짜 선택">
+                </div>
 
-            <!--날씨 중에 쓸 이모티콘을 선택해야 함-->
-            <div class="form-group">
-                <select class="custom-select" id="post-weather">
-                    <option selected>날씨 선택</option>
-                    <option value="1">☀️</option>
-                    <option value="2">⛅</option>
-                    <option value="3">☁️</option>
-                    <option value="4">⛈️</option>
-                    <option value="5">☔</option>
-                    <option value="6">🌧️</option>
-                    <option value="7">🌩️</option>
-                    <option value="8">❄️</option>
-                </select>
-            </div>
+                <!--날씨 중에 쓸 이모티콘을 선택해야 함-->
+                <div class="form-group">
+                    <select class="custom-select" id="post-weather">
+                        <option selected>날씨 선택</option>
+                        <option value="1">☀️</option>
+                        <option value="2">⛅</option>
+                        <option value="3">☁️</option>
+                        <option value="4">⛈️</option>
+                        <option value="5">☔</option>
+                        <option value="6">🌧️</option>
+                        <option value="7">🌩️</option>
+                        <option value="8">❄️</option>
+                    </select>
+                </div>
 
-            <!--사진첨부-->
-            <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="file">
-                    <label class="custom-file-label" for="file">사진 선택</label>
-            </div>
+                <!--사진첨부-->
+                <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="file">
+                        <label class="custom-file-label" for="file">사진 선택</label>
+                </div>
 
-            <!--내용작성-->
-            <div class="form-group-comment">
-                <label for="post-comment">간단 코멘트</label>
-                <textarea class="form-control" id="post-comment" rows="2"></textarea>
-            </div>
+                <!--내용작성-->
+                <div class="form-group-comment">
+                    <label for="post-comment">간단 코멘트</label>
+                    <textarea class="form-control" id="post-comment" rows="2"></textarea>
+                </div>
 
-            <button class="btn btn-primary" onclick="postArticle()" type="button">기록 저장</button>
+                <button class="btn btn-primary" onclick="postArticle()" type="button">기록 저장</button>
+            </div>
         </div>
-    </div>
-    <div class="card-columns" id="cards-box">
-    </div>
-</div>
-
+        
     </div>
 
     <footer class="wrap">
