--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,13 @@
             margin: auto;
         }
 
+      .card-deck {
+        width: 900px;
+        margin: auto;
+        padding: 20px;
+
+      }
+
     </style>
   </head>
   <body>
@@ -107,7 +114,70 @@
     </header>
 
     <div class="wrap">
-        여기는 몸뚱아리
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top"
+                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                 alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+              <p class="card-text">간단한 일기 내용입니다.</p>
+              <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top"
+                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                 alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+              <p class="card-text">간단한 일기 내용입니다.</p>
+              <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top"
+                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                 alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+              <p class="card-text">간단한 일기 내용입니다.</p>
+              <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="card">
+            <img class="card-img-top"
+                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                 alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+              <p class="card-text">간단한 일기 내용입니다.</p>
+              <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top"
+                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                 alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+              <p class="card-text">간단한 일기 내용입니다.</p>
+              <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top"
+                 src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
+                 alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">일기 제목입니다. <span style="font-size: small">여행지</span></h5>
+              <p class="card-text">간단한 일기 내용입니다.</p>
+              <p class="card-text"><small class="text-muted">작성 날짜입니다.</small></p>
+            </div>
+          </div>
+        </div>
     </div>
 
     <footer class="wrap">
