--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,6 @@
         }
 
         .footer {
-            position: absolute;
             bottom: 10px;
             height: 3rem; /* 푸터 높이 */
             background-color: darkgoldenrod;
@@ -119,25 +118,22 @@
       .card-deck {
         width: 900px;
         margin: auto;
-        padding: 20px;
-
+        padding-top: 20px;
       }
 
     </style>
 </head>
 <body>
-<header class="wrap">
-    <div class="sitetop">
-        <h1 class="sitetitle">우리의 여행</h1>
-    </div>
-    <div class="topnav">
-        <a class="active" href="index.html">우리의 여행일기</a>
-        <a href="write.html">일기 쓰기</a>
-        <a href="#mypost">내 일기 모아보기</a>
-        <a href="#about">about</a>
-<<<<<<< HEAD
-      </div>
-      여기에 메뉴
+    <header class="wrap">
+        <div class="sitetop">
+            <h1 class="sitetitle">우리의 여행</h1>
+        </div>
+        <div class="topnav">
+            <a class="active" href="index.html">우리의 여행일기</a>
+            <a href="write.html">일기 쓰기</a>
+            <a href="#mypost">내 일기 모아보기</a>
+            <a href="#about">about</a>
+          </div>
     </header>
 
     <div class="wrap">
@@ -205,14 +201,7 @@
             </div>
           </div>
         </div>
-=======
->>>>>>> 7130704ce989b2a4e9a1b049731219bd6b151431
     </div>
-</header>
-
-<div class="wrap">
-    여기는 몸뚱아리
-</div>
 
 <footer class="wrap">
   <div class="footer">
