--- a/templates/write.html
+++ b/templates/write.html
@@ -122,15 +122,39 @@
         }
         /* 포스팅 관련 css 끝 */
 
+        .footer {
+            bottom: 10px;
+            height: 3rem; /* 푸터 높이 */
+            background-color: darkgoldenrod;
+            width: 900px;
+            text-align: center;
+            color: white;
+        }
+        /* write.html만의 부분 e */
 
-         /* write.html만의 부분 e */
-         @media screen and (max-width: 780px) {
+        
+        /* !!여기는 모바일 버전 css !! */
+        @media screen and (max-width: 780px) {
             /* 아직 write.html에만 작성했고 전체 html에 통일할 계획 s */         
             .sitetop {
                 width: 100%;
-                height: 200px;
+                height: 160px;
+                background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
+                background-size: cover;
+                background-position: center;
             }
             
+            .sitetitle {
+                margin: 0px;
+                padding: 50px 0px;
+                text-align: center;
+                font-family: "Arial Black", sans-serif;
+                font-size: 40px;
+                font-weight: bold;
+                color: #ffffff;
+                text-shadow: 2px 2px 0px #333333;
+            }
+
             /* Add a black background color to the top navigation */
             .topnav {
                 width: 100%;
@@ -146,7 +170,7 @@
                 text-align: center;
                 padding: 10px 16px;
                 text-decoration: none;
-                font-size: 15px;
+                font-size: 12px;
             }
 
             /* Change the color of links on hover */
@@ -157,16 +181,8 @@
 
             /* Add a color to the active/current link */
             .topnav a.active {
-                background-color: #04aa6d;
+                background-color: darkgoldenrod;
                 color: white;
-            }
-
-            .fixed {
-                position: -webkit-sticky;
-                position: sticky;
-                top: 0;
-                z-index: 100;
-                width: 100%;
             }
 
             .wrap {
@@ -179,20 +195,23 @@
                 width: 80%;
                 padding: 30px 25px 25px 20px;
                 margin: auto;
+                margin-top: 25px;
+                margin-bottom: 40px;
+                
             }
             /* write.html만의 부분 e */
-            /* !!여기는 모바일 버전 css 끝!! */
-        }
+            
 
-
-        .footer {
-            bottom: 10px;
-            height: 3rem; /* 푸터 높이 */
-            background-color: darkgoldenrod;
-            width: 900px;
-            text-align: center;
-            color: white;
+            .footer {
+                width: 100%;
+                bottom: 10px;
+                height: 3rem; /* 푸터 높이 */
+                background-color: darkgoldenrod;
+                text-align: center;
+                color: white;
+            }
         }
+        /* !!여기는 모바일 버전 css 끝!! */
     </style>
 
     <script>
@@ -201,13 +220,6 @@
             bsCustomFileInput.init()
         })
 
-        $(window).scroll(function(){
-            var topnav_sticky = $('.topnav'),
-                scroll = $(window).scrollTop();
-
-            if (scroll >= 100) sticky.addClass('fixed');
-            else topnav_sticky.removeClass('fixed');
-        });
     </script>
 
 </head>
@@ -217,7 +229,7 @@
     <div class="sitetop">
         <h1 class="sitetitle">우리의 여행</h1>
     </div>
-    <div class="topnav">
+    <div class="topnav" id="navbar">
         <a href="index.html">우리의 여행일기</a>
         <a class="active" href="write.html">일기 쓰기</a>
         <a href="#mypost">내 일기 모아보기</a>
@@ -225,7 +237,7 @@
     </div>
 </header>
 
-<div class="wrap">
+<div class="wrap" id="sitemiddle">
 
     <!--본문 부분: 기록 작성-->
     <div class="form-post" id="post-box">
