--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,17 @@
     <!--파일업로드 코드-->
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
 
-    <title>공유 여행 기록장</title>
+    <title>우리의 여행</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&display=swap"
+          rel="stylesheet">
 
     <style>
+        * {
+            font-family: 'Noto Serif KR', serif;
+        }
+
         .sitetop {
             height: 300px;
             width: 900px;
@@ -62,7 +70,6 @@
             margin: 10px;
             padding: 120px 0px;
             text-align: center;
-            font-family: "Arial Black", sans-serif;
             font-size: 50px;
             font-weight: bold;
 
@@ -107,7 +114,6 @@
         }
 
         .footer {
-            position: absolute;
             bottom: 10px;
             height: 3rem; /* 푸터 높이 */
             background-color: darkgoldenrod;
@@ -136,11 +142,11 @@
 </div>
 
 <footer class="wrap">
-  <div class="footer">
-     <p>made by 코우파<br>
-     <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
+    <div class="footer">
+        <p>made by 코우파<br>
+            <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
 
-  </div>
+    </div>
 
 </footer>
 </body>
