--- a/templates/write.html
+++ b/templates/write.html
@@ -45,8 +45,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.js"></script>
 
     <title>우리의 여행</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200;300;400;500;600;700;900&display=swap"
+          rel="stylesheet">
 
     <style>
+        * {
+            font-family: 'Noto Serif KR', serif;
+        }
+
         .sitetop {
             height: 300px;
             width: 900px;
@@ -62,10 +70,8 @@
             margin: 10px;
             padding: 120px 0px;
             text-align: center;
-            font-family: "Arial Black", sans-serif;
             font-size: 50px;
             font-weight: bold;
-
             color: #ffffff;
             text-shadow: 2px 2px 0px #333333;
         }
@@ -160,14 +166,21 @@
     <!--본문 부분: 기록 작성-->
     <div class="form-post" id="post-box">
         <div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <input class="form-control" id="post-writer" placeholder="작성자">
+                </div>
+                <div class="form-group col-md-6">
+                    <input class="form-control" id="post-writer" placeholder="숫자">
+                </div>
+
+            </div>
+
             <div class="form-group">
-                <input class="form-control" id="post-writer" placeholder="작성자">
+                <input class="form-control" id="post-place" placeholder="여행지">
             </div>
             <div class="form-group">
-                <input class="form-control" id="post-place" placeholder="장소">
-            </div>
-            <div class="form-group">
-                <input class="form-control" id="post-title" placeholder="제목">
+                <input class="form-control" id="post-title" placeholder="일기 제목">
             </div>
 
             <!--날짜-->
@@ -176,20 +189,20 @@
                        placeholder="날짜 선택">
             </div>
 
-            <!--날씨 중에 쓸 이모티콘을 선택해야 함-->
-            <div class="form-group">
-                <select class="custom-select" id="post-weather">
-                    <option selected>날씨 선택</option>
-                    <option value="1">☀️</option>
-                    <option value="2">⛅</option>
-                    <option value="3">☁️</option>
-                    <option value="4">⛈️</option>
-                    <option value="5">☔</option>
-                    <option value="6">🌧️</option>
-                    <option value="7">🌩️</option>
-                    <option value="8">❄️</option>
-                </select>
+<!--            날씨 중에 쓸 이모티콘을 선택해야 함-->
+<!--            <form action='a.jsp'>-->
+<!--                날씨<br>-->
+<!--                <input type='radio' name='weather' value='sunny'/>️☀️-->
+
+            <div class="form-group" id="post-weather">
+                <button type="button" class="btn" data-toggle="button" aria-pressed="false" autocomplete="off">☀️</button>
+                <button type="button" class="btn" data-toggle="button" aria-pressed="false" autocomplete="off">☁️</button>
+                <button type="button" class="btn">☔</button>
+                <button type="button" class="btn">💨</button>
+                <button type="button" class="btn">⚡</button>
+                <button type="button" class="btn">☃️️</button>
             </div>
+
 
             <!--사진첨부-->
             <div class="custom-file">
@@ -199,11 +212,11 @@
 
             <!--내용작성-->
             <div class="form-group-comment">
-                <label for="post-comment">간단 코멘트</label>
+                <label for="post-comment">일기 내용</label>
                 <textarea class="form-control" id="post-comment" rows="2"></textarea>
             </div>
 
-            <button class="btn btn-primary" onclick="postArticle()" type="button">기록 저장</button>
+            <button class="btn btn-primary" onclick="postArticle()" type="button">일기 저장</button>
         </div>
     </div>
     <div class="card-columns" id="cards-box">
@@ -213,11 +226,11 @@
 </div>
 
 <footer class="wrap">
-  <div class="footer">
-     <p>made by 코우파<br>
-     <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
+    <div class="footer">
+        <p>made by 코우파<br>
+            <a href="https://www.notion.so/c4d4062b9ee64ec7b7c14f301e2f6a45">우리의 여행</a></p>
 
-  </div>
+    </div>
 </footer>
 </body>
 </html>
