--- a/templates/write.html
+++ b/templates/write.html
@@ -126,6 +126,7 @@
             margin-top: 15px;
             margin-bottom: 20px;
         }
+
         /* 포스팅 관련 css 끝 */
 
         .footer {
@@ -136,18 +137,16 @@
             text-align: center;
             color: white;
         }
-        /* write.html만의 부분 e */
 
-        
         /* !!여기는 모바일 버전 css !! */
-        @media screen and (max-width: 780px) {
-            /* 아직 write.html에만 작성했고 전체 html에 통일할 계획 s */         
+        @media screen and (max-width: 900px) {   
             .sitetop {
                 width: 100%;
                 height: 160px;
                 background-image: url("https://miro.medium.com/max/1400/1*T4H2-9ToU2Eg5yns8YQhIA.jpeg");
                 background-size: cover;
                 background-position: center;
+                margin-top: 0;
             }
             
             .sitetitle {
@@ -194,7 +193,6 @@
             .wrap {
                 width: 100%;
             }
-            /* 아직 write.html에만 작성했고 전체 html에 통일할 계획 e */
 
             /* write.html만의 부분 s */
             .form-post {
@@ -225,7 +223,6 @@
             // 이것은 파일업로드 할때 파일명을 보이게 해주는 코드
             bsCustomFileInput.init()
         })
-
     </script>
 
 </head>
@@ -235,15 +232,15 @@
     <div class="sitetop">
         <h1 class="sitetitle">우리의 여행</h1>
     </div>
-    <div class="topnav" id="navbar">
-        <a href="index.html">우리의 여행일기</a>
-        <a class="active" href="write.html">일기 쓰기</a>
+    <div class="topnav">
+        <a href="/">우리의 여행일기</a>
+        <a class="active" href="/menu1">일기 쓰기</a>
         <a href="#mypost">내 일기 모아보기</a>
         <a href="#about">about</a>
     </div>
 </header>
 
-<div class="wrap" id="sitemiddle">
+<div class="wrap">
 
     <!--본문 부분: 기록 작성-->
     <div class="form-post" id="post-box">
@@ -265,28 +262,6 @@
                 <input class="form-control" id="post-title" placeholder="일기 제목">
             </div>
 
-<<<<<<< HEAD
-                <!--날짜-->
-                <div class="form-group">
-                    <input type="date" class="form-control" id="post-date" name="trip-start"
-                        placeholder="날짜 선택">
-                </div>
-
-                <!--날씨 중에 쓸 이모티콘을 선택해야 함-->
-                <div class="form-group">
-                    <select class="custom-select" id="post-weather">
-                        <option selected>날씨 선택</option>
-                        <option value="1">☀️</option>
-                        <option value="2">⛅</option>
-                        <option value="3">☁️</option>
-                        <option value="4">⛈️</option>
-                        <option value="5">☔</option>
-                        <option value="6">🌧️</option>
-                        <option value="7">🌩️</option>
-                        <option value="8">❄️</option>
-                    </select>
-                </div>
-=======
             <!--날짜-->
             <div class="form-group">
                 <input type="date" class="form-control" id="post-date" name="trip-start"
@@ -306,7 +281,6 @@
                 <button type="button" class="btn">⚡</button>
                 <button type="button" class="btn">☃️️</button>
             </div>
->>>>>>> 207e6a5501fbe0d0d2d1b28fff7f8783a8bd0466
 
 
             <!--사진첨부-->
@@ -315,16 +289,6 @@
                 <label class="custom-file-label" for="file">사진 선택</label>
             </div>
 
-<<<<<<< HEAD
-                <!--내용작성-->
-                <div class="form-group-comment">
-                    <label for="post-comment">간단 코멘트</label>
-                    <textarea class="form-control" id="post-comment" rows="2"></textarea>
-                </div>
-
-                <button class="btn btn-primary" onclick="postArticle()" type="button">기록 저장</button>
-            </div>
-=======
             <!--내용작성-->
             <div class="form-group-comment">
                 <label for="post-comment">일기 내용</label>
@@ -332,7 +296,6 @@
             </div>
 
             <button class="btn btn-primary" onclick="postArticle()" type="button">일기 저장</button>
->>>>>>> 207e6a5501fbe0d0d2d1b28fff7f8783a8bd0466
         </div>
     </div>
     <div class="card-columns" id="cards-box">
