--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
         padding-top: 20px;
       }
 
-      @media screen and (max-width: 900px) {     
+      @media only screen and (max-width: 900px) {     
             .sitetop {
                 width: 100%;
                 height: 160px;
