--- a/templates/write.html
+++ b/templates/write.html
@@ -150,7 +150,6 @@
             }
             
             .sitetitle {
-                margin: 0px;
                 padding: 50px 0px;
                 text-align: center;
                 font-family: "Arial Black", sans-serif;
@@ -231,6 +230,12 @@
 <header class="wrap">
     <div class="sitetop">
         <h1 class="sitetitle">우리의 여행</h1>
+    </div>
+    <div class="topnav">
+        <a href="/">우리의 여행일기</a>
+        <a class="active" href="/menu1">일기 쓰기</a>
+        <a href="#mypost">내 일기 모아보기</a>
+        <a href="#about">about</a>
     </div>
 </header>
 
