--- a/templates/write.html
+++ b/templates/write.html
@@ -24,12 +24,8 @@
             rel="stylesheet"
     />
 
-    <!-- JS -->
-    <script
-            crossorigin="anonymous"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    ></script>
+    <!-- JS - 맨위에 있는 jquery 다른 것으로 바꿈-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     <script
             crossorigin="anonymous"
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -222,6 +218,45 @@
             // 이것은 파일업로드 할때 파일명을 보이게 해주는 코드
             bsCustomFileInput.init()
         })
+
+        // 본문 기록 작성에서 id 값으로 지정한 것이 #뒤에 적힌 것
+        let id_writer = $('#post-writer').val()  
+        let id_numbers =  $('#post-numbers').val()
+        let place =  $('#post-place').val()
+        let title =  $('#post-title').val()
+        let date =  $('#post-date').val()
+        let weather =  $('#post-weather').val()
+        let file =  $('#post-file').val()
+        let comment =  $('#post-comment').val()
+
+
+        let form_data = new FormData()
+        form_data.append("id_writer_give", writer)
+        form_data.append("id_numbers_give", numbers)
+        form_data.append("place_give", place)
+        form_data.append("title_give", title)
+        form_data.append("date_give", date)
+        form_data.append("weather_give", weather)
+        form_data.append("file_give", file)
+        form_data.append("comment_give", comment)
+
+
+        function postArticle() {
+            $.ajax({
+                type: "POST",
+                url: "/menu1",
+                data: form_data,
+                cache: false,
+                contentType: false,
+                processData: false,
+                success: function (response) {
+                    alert(response['msg'])
+                    window.location.reload()
+                }
+            })
+
+            
+        }
     </script>
 
 </head>
@@ -249,7 +284,7 @@
                     <input class="form-control" id="post-writer" placeholder="작성자">
                 </div>
                 <div class="form-group col-md-6">
-                    <input class="form-control" id="post-writer" placeholder="숫자">
+                    <input class="form-control" id="post-numbers" placeholder="숫자">
                 </div>
 
             </div>
@@ -284,7 +319,7 @@
 
             <!--사진첨부-->
             <div class="custom-file">
-                <input type="file" class="custom-file-input" id="file">
+                <input type="file" class="custom-file-input" id="post-file">
                 <label class="custom-file-label" for="file">사진 선택</label>
             </div>
 
