--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
             padding-top: 20px;
         }
 
-      @media screen and (max-width: 900px) {     
+        @media screen and (max-width: 900px) {
             .sitetop {
                 width: 100%;
                 height: 160px;
@@ -135,7 +135,7 @@
                 background-size: cover;
                 background-position: center;
             }
-            
+
             .sitetitle {
                 margin: 0px;
                 padding: 50px 0px;
@@ -180,7 +180,7 @@
             .wrap {
                 width: 100%;
             }
-           
+
             /* index.html만의 부분 s */
             .card-deck {
                 width: 100%;
@@ -191,9 +191,8 @@
             .card {
                 min-width: 250px;
             }
-            /* index.html만의 부분 e */
-            
 
+            /* index.html만의 부분 e */
             .footer {
                 width: 100%;
                 bottom: 10px;
@@ -203,45 +202,72 @@
                 color: white;
             }
         }
+
         /* !!여기는 모바일 버전 css 끝!! */
 
     </style>
 </head>
 <body>
-<<<<<<< HEAD
+
 <header class="wrap">
     <div class="sitetop">
         <h1 class="sitetitle">우리의 여행</h1>
     </div>
     <div class="topnav">
-        <a class="active" href="index.html">우리의 여행일기</a>
-        <a href="write.html">일기 쓰기</a>
+        <a class="active" href="/">우리의 여행일기</a>
+        <a href="/menu1">일기 쓰기</a>
         <a href="#mypost">내 일기 모아보기</a>
         <a href="#about">about</a>
     </div>
 </header>
 
 <div class="wrap">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="https://placeimg.com/1080/500/animals" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>My Caption Title (1st Image)</h5>
+                    <p>The whole caption will only show up if the screen is at least medium size.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://placeimg.com/1080/500/arch" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://placeimg.com/1080/500/nature" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
     <div class="card-deck">
         <div class="card">
-=======
-    <header class="wrap">
-        <div class="sitetop">
-            <h1 class="sitetitle">우리의 여행</h1>
-        </div>
-        <div class="topnav">
-            <a class="active" href="/">우리의 여행일기</a>
-            <a href="/menu1">일기 쓰기</a>
-            <a href="#mypost">내 일기 모아보기</a>
-            <a href="#about">about</a>
-          </div>
-    </header>
-
-    <div class="wrap">
-        <div class="card-deck">
-          <div class="card">
->>>>>>> c6148f31ccd5b8709ff5a7e9aa7842cf99ea6a57
             <img class="card-img-top"
                  src="https://lh3.googleusercontent.com/proxy/WNDmMDm4o6CuKMc0_AIeH99MYJX2gFtfOIlTVH0KeKyFGSlQKsxQkS_djhcaunyyRzdywtD_fjIQbUy3C2Oa89A8OkF4lb_2cYzkt9ZIfOTVjqsPx2wj_w"
                  alt="Card image cap">
