yujeong second commit

--- a/templates/write.html
+++ b/templates/write.html
@@ -139,7 +139,7 @@
         }
 
         /* !!여기는 모바일 버전 css !! */
-        @media screen and (max-width: 900px) {   
+        @media screen and (max-width: 900px) {
             .sitetop {
                 width: 100%;
                 height: 160px;
@@ -148,7 +148,7 @@
                 background-position: center;
                 margin-top: 0;
             }
-            
+
             .sitetitle {
                 padding: 50px 0px;
                 text-align: center;
@@ -200,10 +200,10 @@
                 margin: auto;
                 margin-top: 25px;
                 margin-bottom: 40px;
-                
+
             }
             /* write.html만의 부분 e */
-            
+
 
             .footer {
                 width: 100%;
@@ -233,7 +233,7 @@
     </div>
     <div class="topnav">
         <a href="/">우리의 여행일기</a>
-        <a class="active" href="/menu1">일기 쓰기</a>
+        <a class="active" href="/write">일기 쓰기</a>
         <a href="#mypost">내 일기 모아보기</a>
         <a href="#about">about</a>
     </div>
