--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
         padding-top: 20px;
       }
 
-      @media screen and (max-width: 900px) {     
+      @media screen and (max-width: 900px) {
             .sitetop {
                 width: 100%;
                 height: 160px;
@@ -136,7 +136,7 @@
                 background-size: cover;
                 background-position: center;
             }
-            
+
             .sitetitle {
                 margin: 0px;
                 padding: 50px 0px;
@@ -181,7 +181,7 @@
             .wrap {
                 width: 100%;
             }
-           
+
             /* index.html만의 부분 s */
             .card-deck {
                 width: 100%;
@@ -193,7 +193,7 @@
                 min-width: 250px;
             }
             /* index.html만의 부분 e */
-            
+
 
             .footer {
                 width: 100%;
@@ -215,7 +215,7 @@
         </div>
         <div class="topnav">
             <a class="active" href="/">우리의 여행일기</a>
-            <a href="/menu1">일기 쓰기</a>
+            <a href="/write">일기 쓰기</a>
             <a href="#mypost">내 일기 모아보기</a>
             <a href="#about">about</a>
           </div>
