weather radio btn

--- a/templates/write.html
+++ b/templates/write.html
@@ -273,12 +273,13 @@
 <!--                <input type='radio' name='weather' value='sunny'/>️☀️-->
 
             <div class="form-group" id="post-weather">
-                <button type="button" class="btn" data-toggle="button" aria-pressed="false" autocomplete="off">☀️</button>
-                <button type="button" class="btn" data-toggle="button" aria-pressed="false" autocomplete="off">☁️</button>
-                <button type="button" class="btn">☔</button>
-                <button type="button" class="btn">💨</button>
-                <button type="button" class="btn">⚡</button>
-                <button type="button" class="btn">☃️️</button>
+                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☀️</label>
+                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☁️</label>
+                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">☂️️</label>
+                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">💨️</label>
+                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⚡️️</label>
+                <label><input type="radio" name="post-weather" value="sunny" button style="margin:8px;">⛄️️</label>
+
             </div>
 
 
