--- a/templates/write.html
+++ b/templates/write.html
@@ -246,10 +246,10 @@
         <div>
             <div class="form-row">
                 <div class="form-group col-md-6">
-                    <input class="form-control" id="post-writer" placeholder="작성자">
+                    <input class="form-control" id="post-writer" placeholder="ID">
                 </div>
                 <div class="form-group col-md-6">
-                    <input class="form-control" id="post-writer" placeholder="숫자">
+                    <input class="form-control" id="post-writer" placeholder="비밀번호">
                 </div>
 
             </div>
